investor page completed 21/03/2024 11:28am

--- a/investors.html
+++ b/investors.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/form.css">
     <link rel="stylesheet" href="assets/css/subscribe.css">
-    <link rel="stylesheet" href="assets/css/accordian.css">
-    <link rel="stylesheet" href="assets/css/landlord.css">
+    <link rel="stylesheet" href="assets/css/investors.css">
     <link rel="stylesheet" href="assets/css/queries.css">
 </head>
 <body>
@@ -77,10 +76,10 @@
         <section class="section__hero">
             <div class="hero__text">
                 <div class="heading__hero">
-                    <h1>Landlords</h1>
+                    <h1>Investors</h1>
                 </div>
                 <p class="hero__p">
-                    Whether you are a first time, accidental or portfolio landlord, Help4PropertyDeals is perfectly positioned to help you with all your property needs.
+                    Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum dignissim aliquam vitae posuere 
                 </p>
             </div>
         </section>
@@ -92,23 +91,21 @@
                 <div class="intro__text">
                     <div class="heading__container">
                         <h1 class="heading">
-                            Introduction to Help4PropertyDeals 
+                            our Investors SERVICES  
                         </h1>
                     </div>
                     <p>
                         Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum netus cras netus nibh. Gravida fames vulputate justo sodales Gravida fames vulputate justo sodales dui Vestibulum
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulumnibh. Gravida fames vulputate justo sodales dui. Vestibulum Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum netus 
+                        Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum netus cras netus nibh. Gravida fames vulputate justo sodales dui. 
                     </p>
-                    <button class="button blue-button">
-                        <div class="button-content">
-                          <span class="text">Landlords</span>
-                          <!-- <div class="arrow">
-                            <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                          </div> -->
-                        </div>
-                    </button>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum netus cras netus nibh. Gravida fames vulputate justo sodales Gravida fames vulputate justo sodales dui Vestibulum
+                    </p>
+                    <p>
+                        Vestibulumnibh. Gravida fames vulputate justo sodales dui. VestibulumLorem ipsum doloVestibulumnibh. Gravida fames vulputate justo sodales dui. VestibulumLorem ipsum dolo
+                    </p>
                 </div>
                 <div class="form__section" id="form2__box">
                     <form action="" class="web__form">
@@ -180,58 +177,45 @@
             </div>
         </section>
 
-        <!-- SECTION PREP RENT -->
-        <section class="section section__prep">
-            <div class="prep__container">
-                <div class="image__container">
-                    <img src="assets/images/pages/landlords/image-1.png" alt="">
+        <!-- SECTION LANDLORD CARDS -->
+        <section class="section section__landlord-card">
+            <div class="landlord-card__container">
+                <div class="heading__container">
+                    <h1 class="heading">
+                        Our Benefits
+                    </h1>
                 </div>
-                <div class="prep__content">
-                    <div class="heading__container">
-                        <h1 class="heading">
-                            Preparing to rent out your property
-                        </h1>
+                <div class="landlord__content">
+                    <div class="landlord__card">
+                        <div class="icon__img">
+                            <img src="assets/images/icons/icon-7.png" alt="">
+                        </div>
+                        <div class="landlord__text">
+                            <h3>New Landlord Instruction</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
+                            </p>
+                        </div>
                     </div>
-                    <p>
-                        Before you begin the process of letting your property, you need to be thoroughly prepared. There is a lot to do before you can think about getting yournew tenants through the door. More and more legislation is coming out every year, making it increasingly difficult for Landlords to comply.
-                    </p>
-                    <div class="accordion">
-                        <div class="accordion-content">
-                            <div class="acc-header">
-                                <span class="title">Preparing to rent out your property</span>
-                                <i class="fa-solid fa-plus"></i>
-                            </div>
-                            <p class="description">
-                                Lorem estibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim Lorem estibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim Lorem estibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim Lorem estibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim 
+                    <div class="landlord__card">
+                        <div class="icon__img">
+                            <img src="assets/images/icons/icon-8.png" alt="">
+                        </div>
+                        <div class="landlord__text">
+                            <h3>Marketing Consultation</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
                             </p>
                         </div>
-                        <div class="accordion-content">
-                            <div class="acc-header">
-                                <span class="title">Health and Safety</span>
-                                <i class="fa-solid fa-plus"></i>
-                            </div>
-                            <p class="description">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
-                            </p>
+                    </div>
+                    <div class="landlord__card">
+                        <div class="icon__img">
+                            <img src="assets/images/icons/icon-9.png" alt="">
                         </div>
-                        <div class="accordion-content">
-                            <div class="acc-header">
-                                <span class="title">
-                                    Certification and other legislation</span>
-                                <i class="fa-solid fa-plus"></i>
-                            </div>
-                            <p class="description">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto neque, sed inventore illum ut quis ducimus deleniti temporibus maiores? At nisi sed pariatur cupiditate quidem quod adipisci aut, eos quis minima voluptates non veniam ipsam quasi architecto ducimus error eum id ab, suscipit doloribus, ut accusantium consequuntur voluptate! Unde, hic sed rerum officia totam id libero officiis nihil rem sequi porro labore praesentium repudiandae a blanditiis molestias nisi beatae natus! Ea, ut voluptates, natus harum nesciunt odio hic eveniet reprehenderit veritatis, possimus tempora magni soluta eaque quidem neque maxime nostrum sapiente commodi? Earum ex cumque cupiditate dicta, tempora temporibus quaerat.
-                            </p>
-                        </div>
-                        <div class="accordion-content">
-                            <div class="acc-header">
-                                <span class="title">Lorem estibulum dignissim aliquam vitae</span>
-                                <i class="fa-solid fa-plus"></i>
-                            </div>
-                            <p class="description">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
+                        <div class="landlord__text">
+                            <h3>New Property Instruction</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
                             </p>
                         </div>
                     </div>
@@ -257,7 +241,7 @@
                     <p>
                         We charge no marketing fees; hold landlords to no obligations and only charge when we find the tenants on a strictly no-let, no-fee basis. In most instances the initial meeting will be at the property in question, we will consult on what needs to be done prior to let, what market we will be aiming for, time frames and rental potential.
                     </p>
-                    <button class="button red-button">
+                    <button class="button blue-button">
                         <div class="button-content">
                           <span class="text">Contact us</span>
                           <!-- <div class="arrow">
@@ -267,53 +251,7 @@
                     </button>
                 </div>
                 <div class="image__container">
-                    <img src="assets/images/pages/landlords/image-2.png" alt="">
-                </div>
-            </div>
-        </section>
-
-        <!-- SECTION LANDLORD CARDS -->
-        <section class="section section__landlord-card">
-            <div class="landlord-card__container">
-                <div class="heading__container">
-                    <h1 class="heading">
-                        Our Benefits
-                    </h1>
-                </div>
-                <div class="landlord__content">
-                    <div class="landlord__card">
-                        <div class="icon__img">
-                            <img src="assets/images/icons/icon-4.png" alt="">
-                        </div>
-                        <div class="landlord__text">
-                            <h3>New Landlord Instruction</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
-                            </p>
-                        </div>
-                    </div>
-                    <div class="landlord__card">
-                        <div class="icon__img">
-                            <img src="assets/images/icons/icon-5.png" alt="">
-                        </div>
-                        <div class="landlord__text">
-                            <h3>Marketing Consultation</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
-                            </p>
-                        </div>
-                    </div>
-                    <div class="landlord__card">
-                        <div class="icon__img">
-                            <img src="assets/images/icons/icon-6.png" alt="">
-                        </div>
-                        <div class="landlord__text">
-                            <h3>New Property Instruction</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
-                            </p>
-                        </div>
-                    </div>
+                    <img src="assets/images/pages/investors/image-1.png" alt="">
                 </div>
             </div>
         </section>
@@ -322,7 +260,7 @@
         <section class="section section__market">
             <div class="market__container">
                 <div class="image__container">
-                    <img src="assets/images/pages/landlords/image-3.png" alt="">
+                    <img src="assets/images/pages/investors/image-2.png" alt="">
                 </div>
                 <div class="intro__text">
                     <div class="heading__container">
@@ -339,7 +277,7 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae
                     </p>
-                    <button class="button blue-button">
+                    <button class="button red-button">
                         <div class="button-content">
                           <span class="text">Contact us</span>
                           <!-- <div class="arrow">
