--- a/boilerplate.html
+++ b/boilerplate.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="landlord.html"><span>Landlords</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>Investors</span></a>
+                            <a class="nav-link" href="investors.html"><span>Investors</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><span>Services</span></a>
