services & strategies page completed 21/03/2024

--- a/services.html
+++ b/services.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>help4propertydeals|about.page</title>
+        <title>help4propertydeals|services.page</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" /> -->
         <link rel="stylesheet" href="assets/css/general.css">
         <link rel="stylesheet" href="assets/css/button.css">
@@ -13,7 +15,7 @@
         <link rel="stylesheet" href="assets/css/footer.css">
         <link rel="stylesheet" href="assets/css/form.css">
         <link rel="stylesheet" href="assets/css/subscribe.css">
-        <link rel="stylesheet" href="assets/css/about.css">
+        <link rel="stylesheet" href="assets/css/services.css">
         <link rel="stylesheet" href="assets/css/queries.css">
     </head>
     <body>
@@ -55,7 +57,7 @@
                                 <a class="nav-link" href="services.html"><span>Services</span></a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link" href="#"><span>Property</span></a>
+                                <a class="nav-link" href="services.html"><span>Property</span></a>
                             </li>
                             <li class="nav-item ">
                                 <a class="nav-link" href="#"><span></span>Insights</a>
@@ -74,166 +76,95 @@
             <section class="section__hero">
                 <div class="hero__text">
                     <div class="heading__hero">
-                        <h1>About us</h1>
+                        <h1>Services & STRATEGIES</h1>
                     </div>
-                    <p class="hero__p">
-                        Find out what we are about, and meet our team.
-                    </p>
+                    <!-- <p class="hero__p">
+                        Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum dignissim aliquam vitae posuere 
+                    </p> -->
                 </div>
             </section>
         </header>
         <div class="container__body">
 
-            <!-- SECTION HISTORY -->
-            <section class="section section__history">
-                <div class="history__container">
-                    <div class="history__text">
+            <!-- SECTION MARKET -->
+            <section class="section section__services">
+                <div class="lettings__container">
+                    <div class="intro__text">
                         <div class="heading__container">
                             <h1 class="heading">
-                                Our History 
+                                Property Pack
                             </h1>
                         </div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum dignissim aliquam vitae posuere sagittis lectus consectet.
-                        </p>
+                            We source and secure the property for a fee.Any investors first deal is discounted.
+                            Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum netus cras netus nibh. Gravida fames vulputate justo sodales dui Gravida fames vulputate justo sodales Gravida fames vulputate justo sodales dui Vestibulum
+                        </p>  
                         <p>
-                            Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum dignissim aliquam vitae posuere sagittis lectus consectet.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum dignissim aliquam vitae posuere sagittis lectus consectet.
-                        </p>
+                            Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consecteturGravida fames vulputate justo sodales dui Gravida fames vulputate justo sodales Gravida fames vulputate justo sodales dui Vestibulu orem ipsum dolor sit amet consectetur property deal.
+                        </p>           
                     </div>
-                    <div class="container__image">
-                        <img src="assets/images/pages/about/image-1.png" alt="">
+                    <div class="image__container">
+                        <img src="assets/images/pages/services-strategies/image-1.png" alt="">
                     </div>
                 </div>
             </section>
 
-            <!-- MISSION SECTION -->
-            <section class="section section__mission">
-                <div class="mission__container">
-                    <div class="container__image">
-                        <img src="assets/images/pages/about/image-2.png" alt="">
+            <!-- SECTION MARKET -->
+            <section class="section section__market">
+                <div class="market__container">
+                    <div class="image__container">
+                        <img src="assets/images/pages/services-strategies/image-2.png" alt="">
                     </div>
-                    <div class="mission__text">
+                    <div class="intro__text">
                         <div class="heading__container">
                             <h1 class="heading">
-                                Our Mission 
+                                Tenant Management
                             </h1>
                         </div>
                         <p>
-                            Our mission is to empower you, the investor, with tailored property investment opportunities across the thriving UK real estate market. We believe in harnessing the robust economic landscape and rich heritage of the UK to deliver investment solutions that not only meet but exceed your financial aspirations. Your financial empowerment in the UK property market is our paramount objective, as we aspire to be the cornerstone of your investment success.
+                            We find the right tenants for you, depending on the segment of the market you are in.
                         </p>
-                    </div>
-                    <div class="container__image image__2a">
-                        <img src="assets/images/pages/about/image-2a.png" alt="">
-                    </div>
-                    <div class="container__image">
-                        <img src="assets/images/pages/about/image-3.png" alt="">
+                        <p>
+                        isl pretium diam. Lacus risus massa erat suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc condimentum pulvinar massa nec egestas habitasse.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc condimentum pulvinar massa nec egestas habitasse.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae
+                        </p>
                     </div>
                 </div>
             </section>
 
-            <!-- PROPERTY SECTION -->
-            <section class="section section__property">
-                <div class="property__container">
-                    <div class="property__text">
+
+
+            <!-- SECTION TENANT -->
+            <section class="section section__lettings">
+                <div class="lettings__container">
+                    <div class="intro__text">
                         <div class="heading__container">
                             <h1 class="heading">
-                                PROPERTY INVESTING? 
+                                Refurb Package
                             </h1>
                         </div>
                         <p>
-                            A strategic process that involves acquiring  properties capable of generating passive income. The added advantage, in some cases, lies in the potential for these assets to appreciate in value over time. Investing provides a pathway for individuals to augment their earned income without being constrained by the same limitations on time and resources. Some investors aim to replace their earned income entirely with investment returns, while others leverage it as a means to continually grow their wealth by reinvesting proceeds and harnessing the power of compounding over time.
+                            If the property needs a refurb, we will manage and oversee that process for you. (fee contingent on the size and scope of project undertaking.)
                         </p>
+                        <p>
+                            Suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc condimentum pulvinar massa nec egestas habitasse.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc condimentum pulvinar massa nec egestas habitasse.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc cond
+                        </p>
+                        
                     </div>
-                </div>
-            </section>
-
-
-            <!-- SECTION INVEST-->
-            <section class="section__invest">
-                <div class="invest__container">
-                    <div class="invest__button">
-                        <div class="heading__container">
-                            <h1 class="heading">
-                                Why invest?
-                            </h1>
-                        </div>
-                        <button class="button blue-button">
-                            <div class="button-content">
-                              <span class="text">Contact us</span>
-                            </div>
-                        </button>
+                    <div class="image__container">
+                        <img src="assets/images/pages/services-strategies/image-3.png" alt="">
                     </div>
-                    <div class="invest__content">
-                        <p>There are only so many hours in a day, and the prevailing business model worldwide often involves exchanging time for money. Many individuals follow this model through traditional employment or by establishing businesses that offer products or services. While this approach can be effective, it has inherent limitations—namely, the finite nature of time and resources.</p>
-                        <img src="assets/images/pages/about/image-4.png" alt="">
-                    </div>
-                </div>
-            </section>
-
-            <!-- TEAM SECTION -->
-            <section class="section section__team">
-                <div class="team__container">
-                    <div class="heading__container">
-                        <h1 class="heading">
-                            Meet Our Team 
-                        </h1>
-                    </div>
-                    <div class="team__cards">
-                        <div class="team__card">
-                            <img src="assets/images/pages/about/team-1.png" alt="">
-                            <h3>Michael Adeleye</h3>
-                            <p>
-                                Founder & CEO
-                            </p>
-                        </div>
-                        <div class="team__card">
-                            <img src="assets/images/pages/about/team-2.png" alt="">
-                            <h3>Emil Maccalum</h3>
-                            <p>
-                                Chairman
-                            </p>
-                        </div>
-                        <div class="team__card">
-                            <img src="assets/images/pages/about/team-3.png" alt="">
-                            <h3>Sarah Austin</h3>
-                            <p>
-                                Agent
-                            </p>
-                        </div>
-                        <div class="team__card">
-                            <img src="assets/images/pages/about/team-4.png" alt="">
-                            <h3>Melanie Schiff</h3>
-                            <p>
-                                Manager
-                            </p>
-                        </div>
-                        <div class="team__card">
-                            <img src="assets/images/pages/about/team-5.png" alt="">
-                            <h3>Katy Wilson</h3>
-                            <p>
-                                Co-founder
-                            </p>
-                        </div>
-                        <div class="team__card">
-                            <img src="assets/images/pages/about/team-6.png" alt="">
-                            <h3>Rob Moore</h3>
-                            <p>
-                                Manager
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- VIDEO SECTION -->
-            <section class="section section__video">
-
-                <div class="video__container">
-                    <iframe class="iframe" src="https://www.youtube.com/embed/K4TOrB7at0Y?si=xLLsefKE2qG7L_mn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <!-- <iframe class="iframe" src="https://www.youtube.com/embed/K4TOrB7at0Y?si=xLLsefKE2qG7L_mn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
                 </div>
             </section>
 
@@ -273,31 +204,12 @@
                         </form>
                     </div>
 
-                    <div class="container__image">
+                    <div class="landlord__image">
                         <img src="assets/images/pages/home/image-7.png" alt="">
                     </div>
                 </div>
             </section>
 
-            <!-- SECTION NEWSLETTER -->
-            <section class="section section__subscribe">
-                <div class="subscribe__container">
-                    <div class="container2__image">
-                        <img src="assets/images/pages/home/image-8.png" alt="">
-                    </div>
-                    <div class="subscribe__card">
-                        <div class="heading__container">
-                            <h1 class="heading">
-                                Subscriber Newsletter 
-                            </h1>
-                        </div>
-                        <div class="input-box">
-                            <input type="email" placeholder="Enter your email..." />
-                            <button class="button__sub">Subscribe Now</button>
-                        </div>
-                    </div>
-                </div>
-            </section>
         </div>
 
         <footer class="footer">
