--- a/boilerplate.html
+++ b/boilerplate.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="investors.html"><span>Investors</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>Services</span></a>
+                            <a class="nav-link" href="services.html"><span>Services</span></a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="#"><span>Property</span></a>
