--- a/landlord.html
+++ b/landlord.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>help4propertydeals</title>
+    <title>help4propertydeals|landlord.page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -55,7 +55,7 @@
                             <a class="nav-link" href="investors.html"><span>Investors</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>Services</span></a>
+                            <a class="nav-link" href="services.html"><span>Services</span></a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="#"><span>Property</span></a>
