--- a/landlord.html
+++ b/landlord.html
@@ -111,7 +111,7 @@
                     </button>
                 </div>
                 <div class="form__section" id="form2__box">
-                    <form action="" class="web__form">
+                    <form action="submit_form.php" method="POST" class="web__form">
                         <div class="heading__container">
                             <h1 class="heading">
                                 GET STARTED TODAY! 
