linking footer-links. 27/03/2024

--- a/404.html
+++ b/404.html
@@ -141,11 +141,11 @@
                     <ul>
                         <li><a href="home.html">Home</a></li>
                         <li><a href="about.html">About us</a></li>
-                        <li><a href="#">Our Team</a></li>
+                        <li><a href="about.html#our__team">Our Team</a></li>
                         <li><a href="landlord.html">Landlord</a></li>
                         <li><a href="investors.html">Investors</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="home.html#faqs">FAQ</a></li>
+                        <li><a href="home.html#testimony">Testimonials</a></li>
                         <li><a href="contact.html">Contact us</a></li>
                     </ul>
                 </div>
