--- a/boilerplate.html
+++ b/boilerplate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>help4propertydeals | boilerplate.page</title>
+    <title>Boilerplate | help4propertydeals</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" /> -->
@@ -181,14 +181,14 @@
                 <div class="footer-col">
                     <h4>Pages</h4>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Our Team</a></li>
-                        <li><a href="#">Landlord</a></li>
-                        <li><a href="#">Investors</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Testimonials</a></li>
-                        <li><a href="#">Contact us</a></li>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="about.html">About us</a></li>
+                        <li><a href="about.html#our__team">Our Team</a></li>
+                        <li><a href="landlord.html">Landlord</a></li>
+                        <li><a href="investors.html">Investors</a></li>
+                        <li><a href="home.html#faqs">FAQ</a></li>
+                        <li><a href="home.html#testimony">Testimonials</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
