--- a/home.html
+++ b/home.html
@@ -311,7 +311,7 @@
         </section>
 
         <!-- TESTIMONIAL SECTION -->
-        <section class="section section__test">
+        <section class="section section__test" id="testimony">
 
             <div class="test__container">
                 <div class="heading__container">
@@ -494,7 +494,7 @@
         </section>
 
         <!-- FAQ SECTION -->
-        <section class="section section__faq">
+        <section class="section section__faq" id="faqs">
             <div class="faq__container">
                 <div class="about__content" id="faq-content">
                     <div class="heading__container">
@@ -694,14 +694,14 @@
                 <div class="footer-col">
                     <h4>Pages</h4>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Our Team</a></li>
-                        <li><a href="#">Landlord</a></li>
-                        <li><a href="#">Investors</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Testimonials</a></li>
-                        <li><a href="#">Contact us</a></li>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="about.html">About us</a></li>
+                        <li><a href="about.html#our__team">Our Team</a></li>
+                        <li><a href="landlord.html">Landlord</a></li>
+                        <li><a href="investors.html">Investors</a></li>
+                        <li><a href="home.html#faqs">FAQ</a></li>
+                        <li><a href="home.html#testimony">Testimonials</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
